welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:5: error: Boolean does not take parameters
		return ( 40 <= cigars && cigars <= 60 ){
                                                       ^