welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	if (isWeekend){
		return (cigars >= 40 )
	} else {
		return ( 40 <= cigars && cigars <= 60 ){
		}
	}
}
